@@ -701,8 +701,6 @@ static CryptNaClSodiumOnetimeauthStream* GetOnetimeauthStream(pTHX_ SV* sv)
 
 MODULE = Crypt::NaCl::Sodium        PACKAGE = Crypt::NaCl::Sodium
 
-PROTOTYPES: DISABLE
-
 BOOT:
 {
     /* Initialise library */
@@ -711,6 +709,8 @@ BOOT:
         croak("Failed to initialze library");
     }
 }
+
+PROTOTYPES: ENABLE
 
 void
 memcmp(left, right, length = 0)
@@ -787,28 +787,28 @@ compare(left, right, length = 0)
     }
 
 void
-increment(number, length = 0)
-    SV * number
-    unsigned long length
+increment(...)
     INIT:
         unsigned char * number_buf;
         STRLEN len;
+        unsigned int i;
     PPCODE:
     {
-        if (sv_derived_from(number, "Data::BytesLocker")) {
-            DataBytesLocker* sbl = GetBytesLocker(aTHX_ number);
-            if ( sbl->locked ) {
-                croak("Unlock BytesLocker object before accessing the data");
+        for ( i = 0; i < items; i++ ) {
+            if (sv_derived_from(ST(i), "Data::BytesLocker")) {
+                DataBytesLocker* sbl = GetBytesLocker(aTHX_ ST(i));
+                if ( sbl->locked ) {
+                    croak("Unlock BytesLocker object before accessing the data");
+                }
+                number_buf = sbl->bytes;
+                len = sbl->length;
             }
-            number_buf = sbl->bytes;
-            len = sbl->length;
-        }
-        else {
-            number_buf = (unsigned char *)SvPV(number, len);
-        }
+            else {
+                number_buf = (unsigned char *)SvPV(ST(i), len);
+            }
 
-        sodium_increment(number_buf, len);
-
+            sodium_increment(number_buf, len);
+        }
         XSRETURN_EMPTY;
     }
 
